# earthkit-workflows

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  cascade.md  cascade.py  cuda-python-test.py  cupy-test.py  environment.yml  justfile  pyproject.toml  readme.md  requirements.txt  research-and-development.md  roadmap.md  setup.py
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml  test-pypi.yml
cascade/: cascade.py  executor.py  fluent.py  functions.py  graph_config.py  graph_templates.py  graphs.py  grib.py  io.py  preprocessing.py  scheduler.py  taskgraph.py  transformers.py  utility.py
cascade/backends/: __init__.py  array_api.py  base.py  common.py  jax_backend.py  xarray.py  xarray_backend.py
cascade/executors/: base.py  dask.py  simulate.py
cascade/graph/: __init__.py  deduplicate.py  export.py  fuse.py  networkx.py  samplegraphs.py  split.py  transform.py  visit.py
cascade/schedulers/: anneal.py  base.py  depthfirst.py  schedule.py
cascade/wrappers/: mars.py  metadata.py
docs/: ensemble_percentiles.ipynb  introduction.md
docs/benchmarking/: postproc.sh
docs/examples/: arrayapi.ipynb  xarray.ipynb
docs/generators_in_dask/: code.py
examples/: numpy.ipynb  xarray.ipynb
experiments/: fluent.py  graph_[120, 240].html  graph_partition.py  index.html  jax-play.ipynb  jax-playground.py  jax.py  networkx-test.py  numba-cuda-test.py  test.html  thenable.py  torch-play.ipynb  ucx-py-test.py  v1_executor_unfinished.py
experiments/force/: force.css  force.js  force.json
localConfigs/: jobGen.sh  jobSmall.sh
scripts/: example_config.sh  launch_slurm.sh  slurm_entrypoint.sh
src/cascade/: __init__.py  cascade.py  contextgraph.py  fluent.py  profiler.py  taskgraph.py  transformers.py  utility.py  v0_contextgraph.py  visualise.py
tests/: conftest.py  helpers.py  test_depth_first_scheduler.py  test_execution.py  test_fluent.py  test_fluent_graphs.py  test_functions.py  test_io.py  test_patch.py  test_preprocessing.py  test_profiler.py  test_schedule.py  test_scheduler.py  test_transformers.py
tests/backends/: generic_tests.py  test_array_api.py  test_arrayapi.py  test_custom.py  test_earthkit.py  test_jax.py  test_xarray.py
tests/benchmarks/: image_processing.py
tests/controller/: test_dask_executor.py  test_naive.py  test_record.py  test_run.py  test_schedulers.py  test_simulating_executor.py  util.py
tests/earthkit_workflows/: conftest.py  helpers.py  test_fluent.py
tests/executor/: test_executor.py  test_runner.py
tests/executors/: execution_utils.py  test_dask.py  test_dask_executor.py  test_executor.py  test_processpool.py  test_runner.py  test_simulating_executor.py
tests/graph/: payload_utils.py  test_copy.py  test_declare.py  test_deduplicate.py  test_expand.py  test_fuse.py  test_graph.py  test_rename.py  test_serialise.py  test_split.py  test_transform.py  test_visit.py
tests/helpers/: mock.py
tests/low/: test_builders.py  test_dask_adapter.py  test_into.py
tests/scheduler/: test_api.py  test_graph.py  test_schedulers.py  util.py
tests/schedulers/: schedule_utils.py  test_schedule.py  test_scheduler.py  test_simulate.py
tests/shm/: test_shm.py
tests/templates/: clustereps.yaml  ensms.yaml  extreme.yaml  prob.yaml  quantiles.yaml  t850.yaml  wind.yaml
tests/v0_executors/: test_dask.py
(+223 files in other folders)
